--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -761,6 +761,7 @@ banner
   top: 50%;
   transform: translateY(-50%);
   padding: 0 10px 0 0;
+  margin-top: 20px;
 }
 
 .main-banner .caption h6 {
@@ -843,30 +844,42 @@ main p {
 }
 
 .slider {
-  margin: 0 0;
+  margin: 0;
+  padding: 0 10px;
 }
 
 .news-card {
   background-color: #D6D6D6;
-  padding: 10px 10px 0px 10px;
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left;
-  margin: 0 10px; /* Added margin to create spacing between slides */
+  margin: 0 10px;
+}
+
+.news-card a {
+  display: block;
+  text-decoration: none;
 }
 
 .news-card img {
   width: 100%;
-  aspect-ratio: 16 / 9; /* Set aspect ratio to 16:9 */
+  aspect-ratio: 16 / 9;
   border-radius: 8px;
   object-fit: cover;
+  transition: transform 0.2s;
+}
+
+.news-card a:hover img {
+  transform: scale(1.05);
 }
 
 .news-card p {
-  font-size: 12px; /* Reduced font size to 12px */
+  font-size: 12px;
   margin-top: 10px;
   color: #333;
   font-weight: 600;
+  padding-bottom: 10px;
 }
 
 .all-news {
@@ -902,6 +915,22 @@ main p {
   line-height: 1;
   opacity: 0.75;
   z-index: 2;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.slick-arrow {
+    display: none;
+}
+
+
+.slick-prev {
+  left: -25px;
+}
+
+.slick-next {
+  right: -25px;
 }
 
 .slick-prev:hover, .slick-next:hover {
@@ -909,13 +938,10 @@ main p {
   opacity: 1;
 }
 
-.slick-prev {
-  left: -20px;
+.slick-prev:before, .slick-next:before {
+  content: none; /* Hapus default panah dari Slick */
 }
 
-.slick-next {
-  right: -20px;
-}
 /*
 ---------------------------------------------
 services
