--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -760,7 +760,7 @@ banner
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding: 0 10px 0 0;
+  padding: 0 12px 0 0;
   margin-top: 20px;
 }
 
@@ -809,6 +809,11 @@ banner
     font-size: 36px;
   }
 
+/*
+---------------------------------------------
+all news start
+---------------------------------------------
+*/
 }
 
 main {
@@ -838,6 +843,7 @@ main p {
   font-weight: 600;
   margin-bottom: 10px;
   margin-top: 20px;
+  padding-bottom: 5px;
   margin-left: 25px;
   color: #545454;
   text-align: left;
@@ -887,15 +893,8 @@ main p {
   text-align: left;
 }
 
-.news-item {
-  display: flex;
-  align-items: center;
-  padding: 15px 0;
-  border-top: 1px solid #ddd;
-}
-
 .news-item img {
-  width: 30px;
+  width: 100%;
   margin-right: 10px;
 }
 
@@ -941,6 +940,81 @@ main p {
 .slick-prev:before, .slick-next:before {
   content: none; /* Hapus default panah dari Slick */
 }
+
+.all-news {
+    margin-top: 20px;
+    padding: 0 25px;
+    color: #545454;
+}
+
+.all-news h2 {
+    font-size: 23px;
+    font-weight: 600;
+    margin-left: 0px;
+    padding-top: 10px;
+    color: #545454;
+}
+
+.news-item {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    border-top: 2px solid #f00;
+}
+
+
+
+
+.news-content {
+    flex-grow: 1;
+}
+
+.news-content span {
+    font-size: 12px;
+    color: #FF6A00;
+}
+
+.news-title {
+    font-size: 16px;
+    color: #ff0000;
+    font-weight: bold;
+    text-decoration: none;
+    display: block;
+    margin-top: 5px;
+}
+
+.news-title:hover {
+    text-decoration: underline;
+}
+
+.news-content p {
+    font-size: 14px;
+    color: #555;
+    line-height: 1.4;
+    margin-top: 5px;
+    position: relative;
+    right: 20px;
+}
+
+.news-image {
+    width: 100px;
+    height: auto;
+    margin-left: 15px;
+    border-radius: 4px;
+}
+
+@media (max-width: 768px) { /* Ubah 768px sesuai kebutuhan */
+
+    .news-content p {
+        display: none; /* Menyembunyikan logo di tampilan mobile */
+    }
+}
+
+/*
+---------------------------------------------
+all news end
+---------------------------------------------
+*/
 
 /*
 ---------------------------------------------
