--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -885,7 +885,7 @@ main p {
   margin-top: 10px;
   color: #333;
   font-weight: 600;
-  padding-bottom: 10px;
+  line-height: 1.5;
 }
 
 .all-news {
