--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -201,23 +201,24 @@ body {
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     margin: auto;
+    margin-top: 30px;
 }
 
 .form-container h2 {
-    font-size: 1.5rem;
+    font-size: 25px;
     text-align: center;
-    color: red;
+    color: #000000;
     margin-bottom: 15px;
+    font-weight: 600;
 }
 
 /* Grid layout for form fields */
 .form-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 20px;
 }
 
 /* Styling input fields, select, textarea, and button */
@@ -1908,7 +1909,13 @@ section.contact-us .right-info ul li span {
   color: #f5a425;
 }
 
-
+.laporan {
+      font-size: 25px;
+    font-weight: 600;
+    padding: 30px 20px 0 20px;
+    color: #000000;
+    text-align: center;
+}
 /*
 ---------------------------------------------
 heading page
